# TGChannel-Push

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  ecosystem.config.cjs  migrate_add_slot_name.py  pyproject.toml  start-dev.bat  start-prod.bat  stop-dev.bat
docs/: ARCHITECTURE.md  DATA_MODEL.md  ROADMAP.md
scripts/: migrate_add_caption.py  write_slots.py
src/techannel_push/: __init__.py  __main__.py  cli.py  config.py  main.py
src/techannel_push/api/: deps.py
src/techannel_push/api/routes/: __init__.py  channels.py  creatives.py  groups.py  health.py  settings.py  slots.py
src/techannel_push/bot/: __init__.py  bot.py
src/techannel_push/bot/handlers/: channel_events.py  creative_receiver.py
src/techannel_push/database/: __init__.py  models.py  session.py
src/techannel_push/scheduler/: __init__.py  scheduler.py
src/techannel_push/scheduler/jobs/: publish.py
src/techannel_push/services/: publisher.py
src/tgchannel_push/: __init__.py  __main__.py  cli.py  config.py  main.py
src/tgchannel_push/api/: deps.py
src/tgchannel_push/bot/: __init__.py  bot.py
src/tgchannel_push/database/: __init__.py  models.py  session.py
src/tgchannel_push/scheduler/: __init__.py  scheduler.py
src/tgchannel_push/services/: publisher.py  telegram_utils.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.vue  main.js
web/src/api/: index.js
web/src/router/: index.js
web/src/views/: Channels.vue  Creatives.vue  Dashboard.vue  Groups.vue  Settings.vue  Slots.vue
(+11 files in other folders)
